test/fail/infer16.v3
//@seman = TypeParamInferError @ 6:18
def s<T>(t: int) -> int {
	return t;
}
def m() {
	var x = s(0);
}
